force-app/main/default/objects/Service_Provider_Drawdown__c/Service_Provider_Drawdown__c.object-meta.xml
<CustomObject>
    <label>Service Provider Drawdown</label>
    <nameField>
        <displayFormat>SPDD - {00000}</displayFormat>
        <label>SPDD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Provider Drawdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>