force-app/main/default/objects/Service_Provider_Drawdown__c/fields/Drawdown_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Date__c</fullName>
    <label>Drawdown Date</label>
    <type>Date</type>
</CustomField>