force-app/main/default/objects/Service_Provider_Drawdown__c/fields/EFT__c.field-meta.xml
<CustomField>
    <fullName>EFT__c</fullName>
    <label>EFT #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>