force-app/main/default/objects/Service_Provider_Drawdown__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Used for migration purposes</description>
    <formula>Opportunity_Service_Provider_MD__r.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>