force-app/main/default/objects/Service_Provider_Drawdown__c/fields/Opportunity_Service_Provider_MD__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Service_Provider_MD__c</fullName>
    <label>Opportunity Service Provider</label>
    <referenceTo>Opportunity_Service_Provider__c</referenceTo>
    <relationshipLabel>Service Provider Drawdowns</relationshipLabel>
    <relationshipName>Service_Provider_Drawdowns1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>