force-app/main/default/objects/Service_Provider_Drawdown__c/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>