force-app/main/default/objects/Service_Provider_Drawdown__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Fee</fullName>
            </value>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>e-Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>