force-app/main/default/objects/Service_Provider_Drawdown__c/fields/Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem__c</fullName>
    <label>Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>