force-app/main/default/objects/Service_Provider_Drawdown__c/fields/Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Notes__c</fullName>
    <label>Reference / Notes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Admin Fee</fullName>
            </value>
            <value>
                <fullName>Admin Fee charged up front</fullName>
            </value>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>EFT Reject</fullName>
            </value>
            <value>
                <fullName>EFT Reprocessed</fullName>
            </value>
            <value>
                <fullName>EFT to Client</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Loan Payout</fullName>
            </value>
            <value>
                <fullName>Other Fee</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Payment Rejected</fullName>
            </value>
            <value>
                <fullName>Payment Re-processed</fullName>
            </value>
            <value>
                <fullName>Payment Shortfall</fullName>
            </value>
            <value>
                <fullName>Payment Surplus</fullName>
            </value>
            <value>
                <fullName>Payment to Client</fullName>
                <label>Payment to client</label>
            </value>
            <value>
                <fullName>Payment to Lawyer</fullName>
            </value>
            <value>
                <fullName>Payment to other lender</fullName>
            </value>
            <value>
                <fullName>Payment to Third-Party</fullName>
            </value>
            <value>
                <fullName>Payment to Treatment - Service Provider</fullName>
            </value>
            <value>
                <fullName>Referral Fee</fullName>
            </value>
            <value>
                <fullName>Waived Fee</fullName>
            </value>
            <value>
                <fullName>Payment Halted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>