force-app/main/default/objects/Service_Provider_Drawdown__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Drawdown_Date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Reference_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>